# Thesis_testing

./: .gitignore  makefile  scope_table.h  symbol_info.h  symbol_table.h  y.y
Call Graph/: Makefile  filter_callgraph.py
Call Graph V1/: Makefile  process_callgraph.py
Call Graph V2/: CMakeLists.txt  CallGraphAnalyzer.cpp  CallGraphAnalyzer.h  Readme.md  call_graph_ast.cpp  docker-compose.yml  main.cpp  process_callgraph.py
CompilerV1/: adjacency_list.h  makefile  scope_table.h  symbol_table.h  y.y
CompilerV2/: lex_analyzer.l  symbol_info.h  y.y
CompilerV3/: ASTTraverser.cpp  Readme.md
Docker/: Dockerfile
Final Synch/: randomizer.cpp  synch.cpp  synch2.cpp
Graph Clustering/: CMakeLists.txt  main.cpp
Graph Visualizer/: graph_v.py  makefile
Multi File Input/: traverser.cpp
Synch Ideas/: callstack.cpp  callstack2.cpp  cor_thread.cpp  cor_thread2.cpp  coroutine.cpp  inp_converted.cpp  jmp.cpp  jmp2.cpp  new.cpp  stack.cpp  synch.cpp  test.cpp  thread.cpp  thread1.cpp  thread2.cpp  thread3.cpp  thread_stack.cpp  thread_synch.cpp  thread_synch2.cpp  trial.cpp
Synch Ideas/Final/: inp.cpp  synch.cpp  synch2  synch2.cpp
Test Applications/: test_input_1.cpp
Test Applications/Test_Case_1/: input.cpp  output.cpp
Test Applications/Test_Case_1/MultiFile/: funcs.cpp  main.cpp
Test Applications/Test_Case_1/Refactored/: main.cpp  obfuscator.cpp  obfuscator.hpp
